--- a/react_login_hooks-main/react_login_hooks-main/src/index.css
+++ b/react_login_hooks-main/react_login_hooks-main/src/index.css
@@ -4,7 +4,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
 
-* {
+/* * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -145,4 +145,4 @@ li {
     height: 20px;
     width: 20px;
     margin: 0 5px 2px 2px;
-}
+} */
